# aoc2020

./: Cargo.toml  README.md
aoc2020-derive/: Cargo.toml
aoc2020-derive/src/: lib.rs
aoc2020-derive/tests/: test_regex_parsed.rs
inputs/: p18_small.txt
src/: lib.rs
