[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jake Herman <jakeherman3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
aoc2020-derive = {path = "./aoc2020-derive"}
ring-algorithm = "0.2.2"
nom = "6.0.1"
anyhow = "1.0.51"
