[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jake Herman <jakeherman3@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
aoc2020-derive = {path = "./aoc2020-derive"}
ring-algorithm = "0.2.2"
nom = "7.1"
cached = {version = "0.26.2", features = ["proc_macro"], default-features = false }
hex = "0.4"