[package]
name = "aoc2020-derive"
version = "0.1.0"
authors = ["Jake Herman <jakeherman3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.53", features = ["extra-traits", "full"] }
quote = "1.0.7"
regex = "1.4.2"
